--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,12 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
     "mongoose": "^6.2.8"
   }
 }
